Changed pointer to old docs

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <h2>Documentation</h2>
 
-<p>ImaGen is currently being moved to github. Meanwhile, full documentation is available at the following links:</p>
+<p>Param is maintained at github, but some of the documentation has not yet been moved from topographica.org:</p>
 
 <p>User manual and sample output: <a href="http://topographica.org/User_Manual/imagen.html">http://topographica.org/User_Manual/imagen.html</a></p>
 
