--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
 <p>Param is maintained at github, but some of the documentation has not yet been moved from topographica.org:</p>
 
-<p>User manual and sample output: <a href="http://topographica.org/User_Manual/imagen.html">http://topographica.org/User_Manual/imagen.html</a></p>
+<p><a href="http://topographica.org/User_Manual/imagen.html">User Manual</a> and sample output</p>
 
-<p>Reference manual: <a href="http://topographica.org/Reference_Manual/imagen-module.html">http://topographica.org/Reference_Manual/imagen-module.html</a></p>
+<p><a href="http://topographica.org/ImaGen_Reference">Reference Manual</a> generated from the source code</p>
 
 <h2>Support</h2>
 
