--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <h2>Documentation</h2>
 
-<p>Param is maintained at github, but some of the documentation has not yet been moved from topographica.org:</p>
+<p>ImaGen is maintained at github, but some of the documentation has not yet been moved from topographica.org:</p>
 
 <p><a href="http://topographica.org/User_Manual/imagen.html">User Manual</a> and sample output</p>
 
