Updated installation instructions.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <p>ImaGen requires NumPy (<a href="http://numpy.scipy.org/">http://numpy.scipy.org/</a>) and Param (<a href="http://ioam.github.com/param/">http://ioam.github.com/param/</a>).</p>
 
-<p>Official releases of ImaGen are available at <a href="http://pypi.python.org/pypi/imagen">http://pypi.python.org/pypi/imagen</a>, and can be installed along with dependencies via <code>pip install imagen</code> or <code>easy_install imagen</code>.</p>
+<p>Official releases of ImaGen are available at <a href="http://pypi.python.org/pypi/imagen">PyPi</a>, and can be installed along with dependencies via <code>pip install --user imagen</code> or <code>easy_install imagen</code>.  More recent changes can be obtained by cloning the <a href="https://github.com/ioam/imagen">git repository</a>.</p>
 
 <p>Alternatively, after separately installing the dependencies, ImaGen can be installed via <code>python setup.py install</code> (Windows users can download and run an exe from the preceding link).</p>
 
