Fixed broken links to external images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
       </header>
       <section>
-        <p><img src="http://topographica.org/User_Manual/images/patterntypes_small.png" alt="Example patterns"></p>
+        <p><img src="http://topographica.org/_images/patterntypes_small.png" alt="Example patterns"></p>
 
 <p>The ImaGen package provides comprehensive support for creating resolution-independent one and two-dimensional spatial pattern distributions. ImaGen consists of a large library of primarily two-dimensional patterns, including mathematical functions, geometric primitives, images read from files, and many ways to combine or select from any other patterns. These patterns can be used in any Python program that needs configurable patterns or a series of patterns, with only a small amount of user-level code to specify or use each pattern.</p>
 
@@ -43,7 +43,7 @@
 <span class="o">&gt;&gt;&gt;</span> <span class="n">imshow</span><span class="p">(</span><span class="n">pg</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="mf">0.5</span><span class="p">),</span><span class="n">cmap</span><span class="o">=</span><span class="n">cm</span><span class="o">.</span><span class="n">gray</span><span class="p">,</span><span class="n">interpolation</span><span class="o">=</span><span class="s">'nearest'</span><span class="p">)</span>
 </pre></div>
 
-<p><img width="50%" src="http://topographica.org/User_Manual/images/gaussian_0.3.png"><img width="50%" src="http://topographica.org/User_Manual/images/gaussian_0.5.png"></p>
+<p><img width="50%" src="http://topographica.org/_images/gaussian_0.3.png"><img width="50%" src="http://topographica.org/_images/gaussian_0.5.png"></p>
 
 <h2>Installation</h2>
 
