Fixed broken link to reference manual

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <p><a href="http://topographica.org/User_Manual/imagen.html">User Manual</a> and sample output</p>
 
-<p><a href="http://topographica.org/ImaGen_Reference">Reference Manual</a> generated from the source code</p>
+<p><a href="http://topographica.org/Reference_Manual/imagen-module.html">Reference Manual</a> generated from the source code</p>
 
 <h2>Support</h2>
 
